Bug 454066 - 'Could not find plugin kcms/kcm_kwinrules' error when I try to configure special window/app settings via context menu of a window decoration
Summary: 'Could not find plugin kcms/kcm_kwinrules' error when I try to configure spec...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 5.24.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-05-20 01:38 UTC by Patrick Silva
Modified: 2022-05-21 04:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.0
Sentry Crash Report:


Attachments
screenshot (43.73 KB, image/png)
2022-05-20 01:38 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-05-20 01:38:48 UTC
Created attachment 149011 [details]
screenshot

SUMMARY
When I try to configure special window/app settings via context menu of a window decoration I get the result seen in the attached screenshot.

EXPECTED RESULT
we can configure window rules

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Graphics Platform: X11
Comment 1 Patrick Silva 2022-05-20 02:45:54 UTC
Same bug on neon unstable.
Comment 2 Bug Janitor Service 2022-05-20 16:29:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2444
Comment 3 Alexander Lohnau 2022-05-21 04:43:43 UTC
Git commit 329ddf57894314fcc5e67cb1c84c4e3194796870 by Alexander Lohnau, on behalf of Ismael Asensio.
Committed on 21/05/2022 at 04:31.
Pushed by alex into branch 'master'.

kcm/rules: Use the new KCM namespace for standalone launch

After commit c1d0aa18, the namespace where the KCM is installed
changed to `plasma/kcms/systemsettings/`.

We need to point to this new plugin location when the KCM is
launched via Alt-F3 > "Window Specific Properties"

Also let's set the full plugin location from CMake instead of
harcoded in C++ so it is easier to keep it in sync.
FIXED-IN: 5.25.0

M  +1    -0    src/kcmkwin/kwinrules/CMakeLists.txt
M  +1    -1    src/kcmkwin/kwinrules/main.cpp

https://invent.kde.org/plasma/kwin/commit/329ddf57894314fcc5e67cb1c84c4e3194796870
Comment 4 Alexander Lohnau 2022-05-21 04:49:55 UTC
Git commit ef360955fb3ecf92361e0fc2f91d4d3c8079cb96 by Alexander Lohnau, on behalf of Ismael Asensio.
Committed on 21/05/2022 at 04:49.
Pushed by alex into branch 'Plasma/5.25'.

kcm/rules: Use the new KCM namespace for standalone launch

After commit c1d0aa18, the namespace where the KCM is installed
changed to `plasma/kcms/systemsettings/`.

We need to point to this new plugin location when the KCM is
launched via Alt-F3 > "Window Specific Properties"

Also let's set the full plugin location from CMake instead of
harcoded in C++ so it is easier to keep it in sync.
FIXED-IN: 5.25.0


(cherry picked from commit 329ddf57894314fcc5e67cb1c84c4e3194796870)

M  +1    -0    src/kcmkwin/kwinrules/CMakeLists.txt
M  +1    -1    src/kcmkwin/kwinrules/main.cpp

https://invent.kde.org/plasma/kwin/commit/ef360955fb3ecf92361e0fc2f91d4d3c8079cb96